# math_fn

./: .gitignore  .gitmodules  .main.cpp.swp  CMakeLists.txt  README.md  main.cpp  math_fn.cpp  math_fn.h
lib/: CMakeLists.txt  math_fn.h
